plugins/authentication/basic-authentication/2-echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-auth-plugin
  namespace: testing
  annotations:
    konghq.com/plugins: basic-auth-plugin
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /basic-auth
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 80
